--- a/guestbook_backend/package.json
+++ b/guestbook_backend/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.20",
