--- a/guestbook_frontend/package.json
+++ b/guestbook_frontend/package.json
@@ -7,17 +7,23 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.3",
     "jwt-decode": "^3.1.2",
+    "prettier": "^2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^2.1.3",
+    "reactjs-alert": "^2.2.0",
+    "reactstrap": "^9.1.5",
+    "start": "^5.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
+    "prettier": "prettier -w src",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
